one more spacing fix

--- a/src/components/element-components/card.module.css
+++ b/src/components/element-components/card.module.css
@@ -4,7 +4,7 @@
     background-color: #fff;
     font-weight: 400;
     font-size: 0.8rem;
-    padding: 0.5em 0.3em 0.3em 0.8em;
+    padding: 0.5em 2em;
     margin: 1em;
     display: flex;
     flex-direction: column;
@@ -38,6 +38,8 @@
     color: var(--main-txt-color);
     padding: 0 0.3rem 0 0.3rem
 }
+
+/*Correcting styles coming from md HTML*/
 
 .card p {
     margin-bottom: 0;
